--- a/src/pages/api/SearchFile.astro
+++ b/src/pages/api/SearchFile.astro
@@ -1,14 +1,20 @@
 ---
-import { parse } from "querystring";
+interface SearchResult {
+  data: {
+    id: string;
+    name: string;
+    url: string;
+  }[];
+}
 
 const url = Astro.request.url;
 const query = new URL(url, "http://localhost").searchParams;
 const searchQuery = query.get("q") || "";
-let searchResult = null;
+let searchResult: SearchResult | null = null;
 
 if (searchQuery) {
   const response = await fetch(`http://localhost:8091/ufyle/search?q=${searchQuery}`);
-  searchResult = await response.json();
+  searchResult = (await response.json()) as SearchResult;
 }
 ---
 
@@ -24,7 +30,7 @@ if (searchQuery) {
       <h3>Suchergebnisse:</h3>
       <ul>
         {searchResult.data.map((item) => (
-          <li key={item.id}>
+          <li>
             <strong>{item.name}</strong> - <a href={item.url}>{item.url}</a>
           </li>
         ))}
