--- a/src/pages/api/SearchFile.astro
+++ b/src/pages/api/SearchFile.astro
@@ -18,23 +18,34 @@ if (searchQuery) {
 }
 ---
 
-<h2>Dateisuche</h2>
-<form method='get'>
-  <input type='text' name='q' placeholder='Suchbegriff eingeben...' value={searchQuery} />
-  <button type='submit'>Suchen</button>
-</form>
+<style>
+  .search-block {
+    margin: 50px 0px 50px 0px;
+    background-color: #f4a261;
+    border-radius: 15px;
+    padding: 30px;
+  }
+</style>
 
-{
-  searchResult && (
-    <div>
-      <h3>Suchergebnisse:</h3>
-      <ul>
-        {searchResult.data.map((item) => (
-          <li>
-            <strong>{item.name}</strong> - <a href={item.url}>{item.url}</a>
-          </li>
-        ))}
-      </ul>
-    </div>
-  )
-}
+<div class='search-block'>
+  <h2>Dateisuche</h2>
+  <form method='get'>
+    <input type='text' name='q' placeholder='Suchbegriff eingeben...' value={searchQuery} />
+    <button type='submit'>Suchen</button>
+  </form>
+
+  {
+    searchResult && (
+      <div>
+        <h3>Suchergebnisse:</h3>
+        <ul>
+          {searchResult.data.map((item) => (
+            <li>
+              <strong>{item.name}</strong> - <a href={item.url}>{item.url}</a>
+            </li>
+          ))}
+        </ul>
+      </div>
+    )
+  }
+</div>
