--- a/src/pages/api/SearchFile.astro
+++ b/src/pages/api/SearchFile.astro
@@ -21,17 +21,64 @@ if (searchQuery) {
 <style>
   .search-block {
     margin: 50px 0px 50px 0px;
-    background-color: #f4a261;
+    background-color: #dddbcb;
     border-radius: 15px;
     padding: 30px;
+  }
+
+  button {
+    position: relative;
+    overflow: hidden;
+    height: 1.5rem;
+    padding: 0 2rem;
+    border-radius: 1.5rem;
+    background: #3d3a4e;
+    background-size: 400%;
+    color: #fff;
+    border: none;
+    cursor: pointer;
+  }
+
+  button:hover::before {
+    transform: scaleX(1);
+  }
+
+  .button-content {
+    position: relative;
+    z-index: 1;
+  }
+
+  button::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    transform: scaleX(0);
+    transform-origin: 0 50%;
+    width: 100%;
+    height: inherit;
+    border-radius: inherit;
+    background: linear-gradient(82.3deg, rgba(150, 93, 233, 1) 10.8%, rgba(99, 88, 238, 1) 94.3%);
+    transition: all 0.475s;
+  }
+
+  .file-field {
+    border-radius: 5px;
+    box-shadow: none;
+    border: 1px solid black;
+    padding: 5px;
   }
 </style>
 
 <div class='search-block'>
   <h2>Dateisuche</h2>
   <form method='get'>
-    <input type='text' name='q' placeholder='Suchbegriff eingeben...' value={searchQuery} />
-    <button type='submit'>Suchen</button>
+    <input class='file-field' type='text' name='q' placeholder='Suchbegriff eingeben...' value={searchQuery} />
+    <br />
+    <br />
+    <button type='submit'>
+      <span class='button-content'>Suchen </span>
+    </button>
   </form>
 
   {
