--- a/src/pages/api/ShowAll.astro
+++ b/src/pages/api/ShowAll.astro
@@ -11,7 +11,7 @@ const namen = json.data.map((item) => item.name);
 <style>
   .list-block {
     margin: 50px 0px 50px 0px;
-    background-color: #2a9d8f;
+    background-color: #dddbcb;
     border-radius: 15px;
     padding: 30px;
   }
