--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import ShowAll from "./api/ShowAll.astro";
 <style>
   body {
     background-color: #1d1a05;
-    color: white;
+    color: black;
   }
 
   .content-box {
@@ -21,6 +21,7 @@ import ShowAll from "./api/ShowAll.astro";
 
   h1 {
     font-size: 3rem;
+    color: white;
   }
 </style>
 
