added list item margin

--- a/src/pages/api/ShowAll.astro
+++ b/src/pages/api/ShowAll.astro
@@ -15,6 +15,10 @@ const namen = json.data.map((item) => item.name);
     border-radius: 15px;
     padding: 30px;
   }
+
+  ol li {
+    margin: 5px 0px 5px 0px;
+  }
 </style>
 
 <div class='list-block'>
